--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
 
 <h1>THIS IS CHATBOT TEST PAGE</h1>
-<p>Down Right corner there is the green CHATBOT please click it!</p>
+<p>Down Right corner there is the green CHATBOT round please click it!</p>
 
 <script src="https://widget.flowxo.com/embed.js" data-fxo-widget="eyJ0aGVtZSI6IiM2N2MxOGUiLCJ3ZWIiOnsiYm90SWQiOiI2MDQ4YmRmOTJjNDlmMDA4MGQ3MTU5NzIiLCJ0aGVtZSI6IiM2N2MxOGUifX0=" async defer></script>
 
